Changes supporting editing.
Found issues with services not being singletons, and worked throught that with AlertDialogSubscriber, and related.